Fix alignment for file options

--- a/style.css
+++ b/style.css
@@ -378,17 +378,6 @@ body {
   transform: scale(1.1);
   color: #355958;
 }
-.fa-trash
-{
-  margin-left: 32rem;
-}
-
-.icons
-{
-  
-  color:#355958;
-  
-}
 .last-modified {
   font-family: "Combo", cursive;
 
@@ -512,14 +501,30 @@ body {
 .uploaded-files {
   display: flex;
   height: 12vh;
-  width: 80vw;
   border-top: 1px solid grey;
   border-bottom: 1px solid grey;
   background-color: white;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   margin-top: 0.2rem;
+}
+.uploaded-files-option {
+  margin: 0 1rem;
+}
+.field-subject {
+  margin-left: 16vw;
+}
+.field-pdf-preview, .field-subject, .field-last-modified {
+  min-width: 12vw;
+}
+.field-icons
+{
+  display: flex;
+  justify-content: space-around;
+  width: 30vw;
+  color:#355958;
+  
 }
 .working-area {
   display: flex;
